--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -31,7 +31,7 @@ set (AVRO_LIBRARY_DIR_RELEASE ",'${AVRO_LIBRARY_DIR_RELEASE}'")
 #cmake_path(GET AVRO_LIBRARY_RELEASE STEM LAST_ONLY AVRO_LIBRARY_RELEASE_WLE)
 get_filename_component(AVRO_LIBRARY_RELEASE_WLE ${AVRO_LIBRARY_RELEASE} NAME_WLE)
 if (UNIX)
-	string(REGEX REPLACE "^lib" "" AVRO_LIBRARY_RELEASE_WLE AVRO_LIBRARY_RELEASE_WLE)
+	string(REGEX REPLACE "^lib" "" AVRO_LIBRARY_RELEASE_WLE ${AVRO_LIBRARY_RELEASE_WLE})
 endif()
 set (AVRO_LIBRARY_RELEASE_WLE ",'${AVRO_LIBRARY_RELEASE_WLE}'")
 if (Boost_SYSTEM_LIBRARY_RELEASE)
