no fesapi lib prefix on unix

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -49,6 +49,9 @@ if (WITH_FESAPI)
 	set (FESAPI_LIBRARY_DIR_RELEASE ",'${FESAPI_LIBRARY_DIR_RELEASE}'")
 	#cmake_path(GET FESAPI_LIBRARY_RELEASE STEM LAST_ONLY FESAPI_LIBRARY_RELEASE_WLE)
 	get_filename_component(FESAPI_LIBRARY_RELEASE_WLE ${FESAPI_LIBRARY_RELEASE} NAME_WLE)
+	if (UNIX)
+		string(REGEX REPLACE "^lib" "" FESAPI_LIBRARY_RELEASE_WLE ${FESAPI_LIBRARY_RELEASE_WLE})
+	endif()
 	set (FESAPI_LIBRARY_RELEASE_WLE ",'${FESAPI_LIBRARY_RELEASE_WLE}'")
 endif ()
 if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
