--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -53,7 +53,7 @@ jobs:
       - name: FESAPI install
         run: |
           (New-Object System.Net.WebClient).DownloadFile("https://github.com/F2I-Consulting/fesapi/releases/download/v2.10.0.0/fesapi2_10_0_0-cpp-vs2019-x64-staticfHdf1143-staticZlib13.zip", "${{ runner.temp }}\fesapi.zip")
-          7z x ${{ runner.temp }}\fesapi.zip -o${{ runner.temp }}/fesapi-install
+          7z x ${{ runner.temp }}\fesapi2_10_0_0-cpp-vs2019-x64-staticfHdf1143-staticZlib13.zip -o${{ runner.temp }}/fesapi-install
       - name: CMake build and install
         run: |
           cd ${{ github.workspace }}/..
