Support for DataspaceOSDU protocol 2424

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ set (FETPAPI_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})
 
 # version mechanism
 set (Fetpapi_VERSION_MAJOR 0)
-set (Fetpapi_VERSION_MINOR 2)
+set (Fetpapi_VERSION_MINOR 3)
 set (Fetpapi_VERSION_PATCH 0)
 set (Fetpapi_VERSION_TWEAK 0)
 
@@ -190,41 +190,21 @@ endif (WITH_PYTHON_WRAPPING)
 # Getting source files
 # ============================================================================
 
-file (GLOB FETPAPI_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/etp/*.cpp)
-file (GLOB FETPAPI_PROTOCOL_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/etp/ProtocolHandlers/*.cpp)
-file (GLOB FETPAPI_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/src/etp/*.h)
-file (GLOB FETPAPI_PROTOCOL_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/src/etp/ProtocolHandlers/*.h)
-file (GLOB FETPAPI_TOOLS_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/tools/*.cpp)
-file (GLOB FETPAPI_TOOLS_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/src/tools/*.h)
+include(${CMAKE_CURRENT_SOURCE_DIR}/src/CMakeLists.txt)
 set (ALL_SOURCES_AND_HEADERS
 	${ALL_SOURCES_AND_HEADERS}
 	${FETPAPI_SOURCES}
-	${FETPAPI_PROTOCOL_SOURCES}
 	${FETPAPI_HEADERS}
+	${FETPAPI_PROTOCOL_SOURCES}
 	${FETPAPI_PROTOCOL_HEADERS}
 	${FETPAPI_TOOLS_HEADERS}
-	${FETPAPI_TOOLS_SOURCES}
+	${FETPAPI_FESAPI_SOURCES}
+	${FETPAPI_FESAPI_HEADERS}
+	${FETPAPI_SSL_SOURCES}
+	${FETPAPI_SSL_HEADERS}
 )
 
-if (WITH_ETP_SSL)
-	file (GLOB FETPAPI_SSL_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/etp/ssl/*.cpp)
-	file (GLOB FETPAPI_SSL_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/src/etp/ssl/*.h)
-
-	set (ALL_SOURCES_AND_HEADERS
-		${ALL_SOURCES_AND_HEADERS}
-		${FETPAPI_SSL_SOURCES}
-		${FETPAPI_SSL_HEADERS}
-	)
-endif (WITH_ETP_SSL)
-
 if (WITH_FESAPI)
-	file (GLOB FETPAPI_FESAPI_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/etp/fesapi/*.cpp)
-	file (GLOB FETPAPI_FESAPI_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/src/etp/fesapi/*.h)
-	set (ALL_SOURCES_AND_HEADERS
-		${ALL_SOURCES_AND_HEADERS}
-		${FETPAPI_FESAPI_SOURCES}
-		${FETPAPI_FESAPI_HEADERS}
-	)
 	target_include_directories(${PROJECT_NAME} PRIVATE ${FESAPI_INCLUDE_DIR})
 endif (WITH_FESAPI)
 
@@ -241,7 +221,7 @@ target_include_directories(${PROJECT_NAME} INTERFACE
 
 # organizing sources and headers in the Visual Studio Project
 if (WIN32)
-	source_group ("tools" FILES ${FETPAPI_TOOLS_SOURCES} ${FETPAPI_TOOLS_HEADERS})
+	source_group ("tools" FILES ${FETPAPI_TOOLS_HEADERS})
 
 	set (ETP_PREFIX "etp")
 	source_group ("${ETP_PREFIX}" FILES ${FETPAPI_SOURCES} ${FETPAPI_HEADERS})
@@ -351,6 +331,10 @@ install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/cmake/FetpapiConfig.cmake
 
 if (WITH_PYTHON_WRAPPING)
 	IF (WIN32)
+		install (
+			TARGETS ${PROJECT_NAME}
+			RUNTIME DESTINATION ${CMAKE_CURRENT_LIST_DIR}/python/fetpapi/
+		)
 		install(
 			TARGETS ${PROJECT_NAME}
 			RUNTIME_DEPENDENCY_SET dep-set
