--- a/cmake/setup_etp.py.in
+++ b/cmake/setup_etp.py.in
@@ -15,14 +15,14 @@ setup (name = 'fetpapi',
     url         = 'https://github.com/F2I-Consulting/fetpapi',
     description = 'An API for the Energistics Transfer Protocol',
     long_description = '''**FETPAPI** is an API for Energistics Transfer Protocol (aka ETP™)
-ETP is the default standard to access the OSDU RDDMS.
+ETP is the default standard to interact with the OSDU RDDMS.
 
 ### Examples
 
 A Python script and a Jupyter Notebook are available [here](https://github.com/F2I-Consulting/fetpapi/tree/dev/python/example).
 
 ### Credits
-FESAPI Product incorporates ETP™ technology/standards provided by the Energistics Consortium, Inc.
+FETPAPI Product incorporates ETP™ technology/standards provided by the Energistics Consortium, Inc.
 
 ETP is trademark or registered trademark of Energistics Consortium, Inc.''',
     long_description_content_type = 'text/markdown',
