--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -57,7 +57,7 @@ endif ()
 if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
 	set (EXTRA_COMPILE_ARGS "extra_compile_args=['/DSWIG_TYPE_TABLE=FESTAPI']")
 else ()
-	set (EXTRA_COMPILE_ARGS "extra_compile_args=['-DSWIG_TYPE_TABLE=FESTAPI -std=c++11']")
+	set (EXTRA_COMPILE_ARGS "extra_compile_args=['-DSWIG_TYPE_TABLE=FESTAPI', '-std=c++11']")
 endif()
 configure_file(${CMAKE_SOURCE_DIR}/cmake/setup_etp.py.in ${CMAKE_SOURCE_DIR}/python/setup.py) # Overwrite if different
 
@@ -67,9 +67,9 @@ set (EXECUTE_COMMAND "${SWIG_EXECUTABLE}")
 if (WITH_FESAPI)
 	list (APPEND EXECUTE_COMMAND -DWITH_FESAPI)
 endif (WITH_FESAPI)
-if (UNIX)
+if (UNIX AND NOT APPLE)
 	list (APPEND EXECUTE_COMMAND -DSWIGWORDSIZE64)
-endif (UNIX)
+endif (UNIX AND NOT APPLE)
 list (APPEND EXECUTE_COMMAND -v)
 list (APPEND EXECUTE_COMMAND -c++)
 list (APPEND EXECUTE_COMMAND -python)
