--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -235,6 +235,7 @@ jobs:
           CIBW_REPAIR_WHEEL_COMMAND_LINUX: >
             export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/fesapi-install/lib64:/fetpapi-install/lib64 &&
             auditwheel repair -w {dest_dir} {wheel}
+          CIBW_TEST_COMMAND: python {project}/python/example/etp_client_example.py
         with:
           package-dir: ./python
           output-dir: wheelhouse
@@ -305,6 +306,7 @@ jobs:
           # See https://cibuildwheel.pypa.io/en/stable/faq/#macos-passing-dyld_library_path-to-delocate
           CIBW_REPAIR_WHEEL_COMMAND_MACOS: >
             DYLD_LIBRARY_PATH=${{ github.workspace }}/../fesapi-install/lib:${{ github.workspace }}/../fetpapi-install/lib delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}
+          CIBW_TEST_COMMAND: python ${{ github.workspace }}/python/example/etp_client_example.py
         with:
           package-dir: ./python
           output-dir: wheelhouse
